--- a/primeiro-projeto/package.json
+++ b/primeiro-projeto/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "s": "^0.1.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
