--- a/financeiro-ui/package.json
+++ b/financeiro-ui/package.json
@@ -11,27 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.0.4",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "angular-imask": "^4.1.1",
-    "angular-in-memory-web-api": "^0.7.0",
-    "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
-    "currency-formatter": "^1.5.3",
-    "jquery": "^3.3.1",
-    "moment": "^2.22.2",
-    "primeicons": "^1.0.0",
-    "primeng": "^6.1.6",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
-    "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
