--- a/demo-innovation-ui/package.json
+++ b/demo-innovation-ui/package.json
@@ -29,12 +29,14 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "currency-formatter": "^1.5.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0",
     "rxjs": "~6.3.3",
+    "s": "^0.1.1",
     "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
