--- a/primeiro-projeto/angular.json
+++ b/primeiro-projeto/angular.json
@@ -32,7 +32,8 @@
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
