--- a/primeiro-projeto/package.json
+++ b/primeiro-projeto/package.json
@@ -24,7 +24,9 @@
     "angular-in-memory-web-api": "^0.8.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "inputmask": "^4.0.8",
     "jquery": "^3.4.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
